# AiML-ethiopian-medical-biz-datawarehouse

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: dbt-ci-cd.yml.yml
dbt_med/: dbt_project.yml  profile.yml
dbt_med/models/: fact_telegram.sql  final_telegram_messages.sql  handle_missing_values.sql  remove_duplicates.sql  standardize_formats.sql  telegram_messages.sql
dbt_med/tests/: data_validation.sql  final_telegram_messages_test.sql
fastAPI/: crud.py  database.py  main.py  medicalAPI.postman_collection.json  models.py  schemas.py  test_main.py
fastAPI/postman_collection/: post.json
fastAPI/tests/: test.py  test_crud.py
notebooks/: data_scraping_and_cleaning.ipynb  yolo.ipynb
scripts/: +251940988783.session  data_cleaning_and_saving.py  extract_load_pipeline.py  extract_raw_data.py  image_scraper.py  load_csv.py  profiles.yml  requirements.txt  save_yolo_lable_to_db.py  telegram_messages_schema.sql  yolo_results_schema.sql
